MC: redesigned cylindrical fiber detector to be only reflected surface fiber detector.  This simplified the code by 1) removing special case of RayIntersectBoundary of CylinderTissueRegion, 2) removing CylinderTissueRegion to be part of tissue definition, 3) removing InternalFiber VirtualBoundary and adding the surface fiber detector to Reflectance VB. Unit tests passing and Bargo results are 0.0270 compared to 0.0266 in Bargo paper.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -656,9 +656,6 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\ATotalDetector.cs">
       <Link>MonteCarlo\Detectors\ATotalDetector.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Detectors\CylindricalFiberDetector.cs">
-      <Link>MonteCarlo\Detectors\CylindricalFiberDetector.cs</Link>
-    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\Detector.cs">
       <Link>MonteCarlo\Detectors\Detector.cs</Link>
     </Compile>
@@ -754,6 +751,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\RSpecularDetector.cs">
       <Link>MonteCarlo\Detectors\RSpecularDetector.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\SurfaceFiberDetector.cs">
+      <Link>MonteCarlo\Detectors\SurfaceFiberDetector.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\TallyDetails.cs">
       <Link>MonteCarlo\Detectors\TallyDetails.cs</Link>
@@ -1123,9 +1123,6 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\VirtualBoundaries\GenericVolumeVirtualBoundary.cs">
       <Link>MonteCarlo\VirtualBoundaries\GenericVolumeVirtualBoundary.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\VirtualBoundaries\InternalFiberVirtualBoundary.cs">
-      <Link>MonteCarlo\VirtualBoundaries\InternalFiberVirtualBoundary.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\VirtualBoundaries\pMCDiffuseReflectanceVirtualBoundary.cs">
       <Link>MonteCarlo\VirtualBoundaries\pMCDiffuseReflectanceVirtualBoundary.cs</Link>
