MC: 1) modified SurfaceFiberDetector back to being reflectance tally rather than history tally, 2) created MultiLayerWithSurfaceFiberTissue that is replica of MultiLayerTissue but with added surface region with optical properties.  This allows Photon in CrossOrReflect to ask tissue for the neighbor tissue region index and obtain the fiber refractive index, n, when at the surface in the detector.  Cons of the current design: user has to specify tissue region SurfaceFiberTissueRegion to match the region specified in the SurfaceFiberDetector.  Pro: it appears to be a closer match to Bargo's results.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1085,6 +1085,9 @@
     <Compile Include="..\Vts\MonteCarlo\Tissues\MultiLayerTissue.cs">
       <Link>MonteCarlo\Tissues\MultiLayerTissue.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\MultiLayerWithSurfaceFiberTissue.cs">
+      <Link>MonteCarlo\Tissues\MultiLayerWithSurfaceFiberTissue.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\SemiInfiniteTissue.cs">
       <Link>MonteCarlo\Tissues\SemiInfiniteTissue.cs</Link>
     </Compile>
@@ -1105,6 +1108,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\SingleVoxelTissue.cs">
       <Link>MonteCarlo\Tissues\SingleVoxelTissue.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\SurfaceFiberTissueRegion.cs">
+      <Link>MonteCarlo\Tissues\SurfaceFiberTissueRegion.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\TissueBase.cs">
       <Link>MonteCarlo\Tissues\TissueBase.cs</Link>
