MC: forgot to add unit test to Vts.Desktop.  All tests pass and clean up after.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -303,6 +303,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwisterTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\FluorescenceEmissionSourcesTests.cs">
+      <Link>MonteCarlo\Sources\FluorescenceEmissionSourcesTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\LineSourcesTests.cs">
       <Link>MonteCarlo\Sources\LineSourcesTests.cs</Link>
     </Compile>
