Added 6 of the missing unit tests to FileIOTests

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -380,6 +380,9 @@
     <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\input.txt">
       <Link>Resources\sourcetest\input.txt</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\position.txt">
+      <Link>Resources\position.txt</Link>
+    </EmbeddedResource>
     <Content Include="App_Readme\MathNet.Numerics.authors.txt" />
     <Content Include="App_Readme\MathNet.Numerics.copyright.txt" />
     <Content Include="App_Readme\MathNet.Numerics.readme.txt" />
