--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <None Remove="Resources\embeddedresourcefile.txt" />
     <None Remove="Resources\folder\embeddedresourcefile.txt" />
+    <None Remove="Resources\position.txt" />
     <None Remove="Resources\resourcefile.txt" />
     <None Remove="Resources\sourcetest\AOfXAndYAndZ" />
     <None Remove="Resources\sourcetest\AOfXAndYAndZ.txt" />
@@ -17,6 +18,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\embeddedresourcefile.txt" />
     <EmbeddedResource Include="Resources\folder\embeddedresourcefile.txt" />
+    <EmbeddedResource Include="Resources\position.txt" />
     <EmbeddedResource Include="Resources\resourcefile.txt" />
     <EmbeddedResource Include="Resources\sourcetest\AOfXAndYAndZ" />
     <EmbeddedResource Include="Resources\sourcetest\AOfXAndYAndZ.txt" />
