Updated one of the ignored unit test in FileIO and added a supporting text file to resources so it passes

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -398,6 +398,9 @@
     <EmbeddedResource Include="..\Vts.Test\Resources\streamfindertest\resourcefile.txt">
       <Link>Resources\streamfindertest\resourcefile.txt</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\fileiotest\ROfRho.txt">
+      <Link>Resources\fileiotest\ROfRho.txt</Link>
+    </EmbeddedResource>
     <Content Include="App_Readme\MathNet.Numerics.authors.txt" />
     <Content Include="App_Readme\MathNet.Numerics.copyright.txt" />
     <Content Include="App_Readme\MathNet.Numerics.readme.txt" />
