Excised math code to determine if Ray Intersects Infinite Cylinder to Helper class so that it could be used for cylinders with orientation along x, y or z-axes.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -821,6 +821,9 @@
     <Compile Include="..\Vts\MonteCarlo\Factories\VirtualBoundaryFactory.cs">
       <Link>MonteCarlo\Factories\VirtualBoundaryFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Helpers\CylinderTissueRegionToolbox.cs">
+      <Link>MonteCarlo\Helpers\CylinderTissueRegionToolbox.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Helpers\DetectorBinning.cs">
       <Link>MonteCarlo\Helpers\DetectorBinning.cs</Link>
     </Compile>
