Multiple Tissue edits: 1) Moved logic of RayIntersectionBoundary for LayerTissueRegion from MultiLayerTissue to LayerTissueRegion where is belongs.  Had problems because MuitLayerTissue is base class for SingleInclusionTissue and so this method is overriden for layers with inclusions.  Added logic that satifies both cases. 2) Filled out CylinderTissueRegion class.  This class hadn't been used anyway so code was basically a stub. 3) Added a BoundedTissue class to specify a layered tissue bounded laterally by a TissueRegion, e.g. CylinderTissueRegion.  Also add BoundingCylinderTissue that specifies just that.  Added unit tests for all.  Still need to add example input for 3) into SimulationInputProvider and add a unit test that tests the results of a small simulation.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1064,6 +1064,12 @@
     <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\VolumtricCuboidal\VolumetricCuboidalSourceBase.cs">
       <Link>MonteCarlo\Sources\VolumetricSources\VolumetricCuboidal\VolumetricCuboidalSourceBase.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\BoundedTissue.cs">
+      <Link>MonteCarlo\Tissues\BoundedTissue.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\BoundingCylinderTissue.cs">
+      <Link>MonteCarlo\Tissues\BoundingCylinderTissue.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\CylinderTissueRegion.cs">
       <Link>MonteCarlo\Tissues\CylinderTissueRegion.cs</Link>
     </Compile>
