--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -331,11 +331,20 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Tissues\BoundedTissueTests.cs">
+      <Link>MonteCarlo\Tissues\BoundedTissueTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Tissues\CylinderTissueRegionTests.cs">
+      <Link>MonteCarlo\Tissues\CylinderTissueRegionTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Tissues\EllipsoidTissueRegionTests.cs">
       <Link>MonteCarlo\Tissues\EllipsoidTissueRegionTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Tissues\InfiniteCylinderTissueRegionTests.cs">
       <Link>MonteCarlo\Tissues\InfiniteCylinderTissueRegionTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Tissues\LayerTissueRegionTests.cs">
+      <Link>MonteCarlo\Tissues\LayerTissueRegionTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Tissues\MultiConcentricInfiniteCylinderTissueTests.cs">
       <Link>MonteCarlo\Tissues\MultiConcentricInfiniteCylinderTissueTests.cs</Link>
