To get BoundingTissue and BoundingCylinderTissue to work, needed to 1) add VirtualBoundary defining bounded tissue region, 2) add detector ATotalBoundingVolume that hangs off VB and tallies photons absorbed into bounding volume (note: this amount + ATotal + RDiffuse + TDiffuse should equal 1) and 3) unit tests to validate new code.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -256,6 +256,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\CAWLayersDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\CAWLayersDetectorsTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWBoundingCylinderDetectorsTests.cs">
+      <Link>MonteCarlo\Detectors\DAWBoundingCylinderDetectorsTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWInfiniteCylinderDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\DAWInfiniteCylinderDetectorsTests.cs</Link>
     </Compile>
