--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1079,6 +1079,9 @@
     <Compile Include="..\Vts\MonteCarlo\Tissues\BoundingCylinderTissue.cs">
       <Link>MonteCarlo\Tissues\BoundingCylinderTissue.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\CaplessCylinderTissueRegion.cs">
+      <Link>MonteCarlo\Tissues\CaplessCylinderTissueRegion.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\CylinderTissueRegion.cs">
       <Link>MonteCarlo\Tissues\CylinderTissueRegion.cs</Link>
     </Compile>
