MC: Added FluorescenceEmissionAOfRhoAndZSource, Loader and associated unit tests.  Needed to rename exciting input.txt in Resources so that I could have input file for these unit tests and added AOfRhoAndZ and .txt in Resources.  Modified CaplessCylinderTissueRegion to have ContainsPosition method more like other TissueRegions, not sure this is needed.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -393,15 +393,15 @@
     <EmbeddedResource Include="..\Vts.Test\Resources\fileiotest\binarydbl">
       <Link>Resources\fileiotest\binarydbl</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\AOfRhoAndZ">
+      <Link>Resources\sourcetest\AOfRhoAndZ</Link>
+    </EmbeddedResource>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
     <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\AOfXAndYAndZ.txt">
       <Link>Resources\sourcetest\AOfXAndYAndZ.txt</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\input.txt">
-      <Link>Resources\sourcetest\input.txt</Link>
     </EmbeddedResource>
     <EmbeddedResource Include="..\Vts.Test\Resources\fileiotest\file7.xml">
       <Link>Resources\fileiotest\file7.xml</Link>
@@ -420,6 +420,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="..\Vts.Test\Resources\fileiotest\ROfRho.txt">
       <Link>Resources\fileiotest\ROfRho.txt</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\AOfRhoAndZ.txt">
+      <Link>Resources\sourcetest\AOfRhoAndZ.txt</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\inputAOfRhoAndZ.txt">
+      <Link>Resources\sourcetest\inputAOfRhoAndZ.txt</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\sourcetest\inputAOfXAndYAndZ.txt">
+      <Link>Resources\sourcetest\inputAOfXAndYAndZ.txt</Link>
     </EmbeddedResource>
     <Content Include="App_Readme\MathNet.Numerics.authors.txt" />
     <Content Include="App_Readme\MathNet.Numerics.copyright.txt" />
