--- a/src/Vts.Desktop.Test/packages.config
+++ b/src/Vts.Desktop.Test/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MathNet.Numerics" version="4.8.1" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.9.0" targetFramework="net461" />
   <package id="Meta.Numerics" version="4.0.7" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
 </packages>
