--- a/src/Vts.MonteCarlo.CommandLineApplication.Test/packages.config
+++ b/src/Vts.MonteCarlo.CommandLineApplication.Test/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathNet.Numerics" version="4.9.0" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="16.6.1" targetFramework="net461" />
+  <package id="Microsoft.NET.Test.Sdk" version="16.6.1" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
 </packages>
